# colony

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  prototool.yaml
cmd/colony-cli/: main.go
cmd/colony-worker/: main.go
cmd/colony-worker/app/: app.go
cmd/colony-worker/app/options/: options.go
docs/spec/: README.md  colony-cli.md
pkg/api/: api.go  cert_key.go  cert_key_test.go  config.go  option.go
pkg/auth/: auth.go  cert_key.go  cert_key_test.go  grpc.go  jwt.go  jwt_test.go
pkg/config/: codec.go  config.go  config_test.go  store.go
pkg/config/testdata/: test.yaml
pkg/crypto/: BUILD.bazel  crypto.go  gcm.go  gcm_test.go
pkg/jwt/: BUILD.bazel  jwt.go  jwt_test.go
pkg/jwt/mock/: BUILD.bazel  jwt.go
pkg/log/: logger.go
pkg/meta/: meta.go
pkg/runtime/: BUILD.bazel  runtime.go  runtime_test.go
pkg/runtime/mock/: BUILD.bazel  runtime.go
pkg/storage/: storage.go  storage_test.go
pkg/storage/mock/: storage.go
pkg/worker/: invoke.go  invoke_test.go  option.go  server.go  worker.go  worker_test.go
pkg/worker/testdata/: sample.wasm
proto/api/v1beta1/: api.pb.go  api.proto
proto/api/v1beta1/mock/: api.pb.go
proto/config/: config.pb.go  config.proto
proto/registry/: BUILD.bazel  registry.proto
proto/registry/v1beta1/: BUILD.bazel  registry.pb.go  registry.proto
proto/worker/: BUILD.bazel  worker.proto
proto/worker/v1beta1/: BUILD.bazel  worker.pb.go  worker.proto
wasm/sample/: Cargo.toml  Makefile  sample.wasm
wasm/sample/src/: lib.rs
