load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["jwt.go"],
    importpath = "github.com/socketfunc/colony/pkg/jwt",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gbrlsnchs_jwt_v3//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["jwt_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_gbrlsnchs_jwt_v3//:go_default_library",
        "@com_github_magiconair_properties//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
