load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "colony_registry_proto",
    srcs = ["registry.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "colony_registry_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/socketfunc/colony/proto/registry",
    proto = ":colony_registry_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":colony_registry_go_proto"],
    importpath = "github.com/socketfunc/colony/proto/registry",
    visibility = ["//visibility:public"],
)
