load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "colony_worker_proto",
    srcs = ["worker.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "colony_worker_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/socketfunc/colony/proto/worker",
    proto = ":colony_worker_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":colony_worker_go_proto"],
    importpath = "github.com/socketfunc/colony/proto/worker",
    visibility = ["//visibility:public"],
)
