load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["jwt.go"],
    importpath = "github.com/socketfunc/colony/pkg/jwt/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/jwt:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
