load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "workerv1beta1_proto",
    srcs = ["worker.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "workerv1beta1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/socketfunc/colony/proto/worker/v1beta1",
    proto = ":workerv1beta1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":workerv1beta1_go_proto"],
    importpath = "github.com/socketfunc/colony/proto/worker/v1beta1",
    visibility = ["//visibility:public"],
)
